--- a/src/main/resources/templates/disciplines/topic-details.html
+++ b/src/main/resources/templates/disciplines/topic-details.html
@@ -179,11 +179,7 @@
 					<span id="questionIndex" class="fw-bold">- Question 1 de 3</span>
 					<hr>
 
-					<h5 id="question">Os sistemas de informacao estao evoluindo de acordo com as tendencias de mercado,
-						eles proporcionam ganhos imensuraveis para as organizacoes no que diz respeito a ganho de espaco
-						organizacao dos arquivos e informacoes e com isso a liberdade de acesso, representada pela possibilidade
-						de trabalhar com os dados oferecidos pelo sistema da melhor forma possivel. Assim sendo, podemos
-						concluir que:</h5>
+					<div id="question">The question is...</div>
 					<br>
 
 					<!-- Answers -->
