--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -184,7 +184,7 @@ body {
 
 	<script>
 		function access() {
-			location.href = '/join/'
+			location.href = '/join?login'
 		}
 	</script>
 </body>
