--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -54,7 +54,7 @@
 					</li>
 				</ul>
 				<div class="d-flex">
-					<a class="btn btn-outline-light me-2" href="#" th:href="@{/join}" sec:authorize="!isAuthenticated()">Cadastre-se</a>
+					<a class="btn btn-outline-light me-2" href="#" th:href="@{/join?register}" sec:authorize="!isAuthenticated()">Cadastre-se</a>
 
 					<a class="btn btn-outline-light me-2" href="#" th:href="@{/logout}" sec:authorize="isAuthenticated()">Logout</a>
 
