--- a/src/main/resources/templates/disciplines/discipline-details.html
+++ b/src/main/resources/templates/disciplines/discipline-details.html
@@ -301,8 +301,10 @@
 		});
 
 		hljs.configure({
+			tabReplace: '    ',
 			languages : [ 'java' ]
 		});
+		hljs.highlightAll();
 
 		var editor = new Quill('#editor-container', {
 			modules : {
