--- a/src/main/resources/templates/admin/topic-edit.html
+++ b/src/main/resources/templates/admin/topic-edit.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 <style type="text/css">
 	#editor-container {
-	  height: 350;
+	  height: 350px;
 	}
 </style>
 </head>
@@ -143,21 +143,21 @@
 		var editor = new Quill('#editor-container', {
 			modules : {
 				syntax : true,
-				toolbar : [
-				  ['bold', 'italic', 'underline', 'strike'],        // toggled buttons
-				  ['blockquote', 'code-block'],
-				  [ 'link', 'image', 'video', 'formula' ],
-				  [{ 'header': 1 }, { 'header': 2 }],               // custom button values
-				  [{ 'list': 'ordered'}, { 'list': 'bullet' }],
-				  [{ 'script': 'sub'}, { 'script': 'super' }],      // superscript/subscript
-				  [{ 'indent': '-1'}, { 'indent': '+1' }],          // outdent/indent
-				  [{ 'direction': 'rtl' }],                         // text direction
-				  [{ 'size': ['small', false, 'large', 'huge'] }],  // custom dropdown
-				  [{ 'header': [1, 2, 3, 4, 5, 6, false] }],
-				  [{ 'color': [] }, { 'background': [] }],          // dropdown with defaults from theme
-				  [{ 'font': [] }],
-				  [{ 'align': [] }],
-				  ['clean']                                         // remove formatting button
+				toolbar : [ 
+					[ { 'font' : [] } ],
+					[ { 'size' : [ 'small', false, 'large', 'huge' ] } ], // custom dropdown
+					[ 'bold', 'italic', 'underline', 'strike' ], // toggled buttons
+					[ {	'header' : 1 }, { 'header' : 2 } ], // custom button values
+					[ { 'header' : [ 1, 2, 3, 4, 5, 6, false ] } ], 
+					[ { 'color' : [] }, { 'background' : [] } ], // dropdown with defaults from theme
+					[ { 'align': ''}, { 'align': 'center' }, { 'align': 'right' }, { 'align': 'justify' } ], 
+					[ { 'script' : 'sub' }, { 'script' : 'super' } ], // superscript/subscript
+					[ { 'list' : 'ordered' }, { 'list' : 'bullet' } ], 
+					[ { 'indent' : '-1' }, { 'indent' : '+1' } ], // outdent/indent
+					[ { 'direction' : 'rtl' } ], // text direction
+					[ 'blockquote', 'code-block' ],
+					[ 'link', 'image', 'video', 'formula' ], 
+					[ 'clean' ] // remove formatting button
 				],
 				history: {
 			      delay: 2000,
