--- a/src/main/resources/templates/disciplines/forum-topic.html
+++ b/src/main/resources/templates/disciplines/forum-topic.html
@@ -7,6 +7,12 @@
 <body>
 	<div class="card shadow mt-3">
 		<div class="card-body">
+			<div class="d-flex mb-3" style="font-size: 14px;">
+				<a href="#" class="link-danger text-decoration-none fw-bold" 
+					th:href="@{/disciplines/{id}(id=${discipline.id})}" 
+					th:text="${discipline.name}">Estrutura de Dados</a>
+			</div>
+			
 			<h3 class="card-title" th:text="${forumTopic.title}">Como instalar PIP em arquivo
 				requirements.txt do Odoo</h3>
 			<span class="card-text">
