--- a/src/main/resources/templates/disciplines/discipline-details.html
+++ b/src/main/resources/templates/disciplines/discipline-details.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="www.thymeleaf.org"
+<html xmlns:th="www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	th:replace="~{fragments/layout :: base(${discipline.code}, ~{::body}, _, _, ~{::style})}">
 <head>
 <meta charset="utf-8">
@@ -43,9 +43,7 @@
 					</div>
 					<span id="totalLikes"
 						class="fw-bolder text-primary border border-1 border-start-0 border-primary p-2 rounded-end"
-						th:classappend="${discipline.user.liked} ? 'bg-white' : 'bg-dark'"
-						th:text="${discipline.likes}"></span>
-
+						th:classappend="${discipline.user.liked} ? 'bg-white' : 'bg-dark'" th:text="${discipline.likes}"></span>
 				</div>
 			</div>
 
@@ -64,13 +62,14 @@
 			<span class="text-center" th:text="${message}"></span>
 			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 		</div>
-	
+
 		<!-- Topic Form -->
 		<div class="accordion my-5" id="newTopicContainer">
 			<div class="accordion-item">
 				<h6 class="accordion-header" id="headingTwo">
-					<button class="accordion-button collapsed bg-danger text-white fw-bold" type="button" data-bs-toggle="collapse"
-						data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="height: 50px">
+					<button class="accordion-button collapsed bg-danger text-white fw-bold" type="button"
+						data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false"
+						aria-controls="collapseTwo" style="height: 50px">
 						<h6>Deseja compartilhar seu conhecimento ? Contribua agora!</h6>
 					</button>
 				</h6>
@@ -80,16 +79,16 @@
 
 						<div class="card border border-1 border-secondary shadow">
 							<div class="card-body">
-								<h4 class="card-title text-center" 
+								<h4 class="card-title text-center"
 									th:utext="'Sentiu falta de algum tópico/assunto interessante em ' + ${#strings.arraySplit(discipline.name, ' ')[0]} + '? <br> Manda pra gente!'">
 								</h4>
-								
-								<div class="alert alert-danger alert-dismissible fade show m-3" role="alert"
-									th:if="${error}">
-									<span class="text-center">Houve um erro ao enviar o conteúdo. Verifique os dados e tente novamente.</span>
+
+								<div class="alert alert-danger alert-dismissible fade show m-3" role="alert" th:if="${error}">
+									<span class="text-center">Houve um erro ao enviar o conteúdo. Verifique os dados e tente
+										novamente.</span>
 									<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 								</div>
-		
+
 								<form action="#" method="post" th:action="@{/disciplines/{id}(id=${discipline.id})}"
 									th:object="${topic}">
 									<div class="mb-3 mt-2">
@@ -119,25 +118,23 @@
 
 										<input type="hidden" th:field="*{htmlContent}" aria-describedby="htmlContentFeedback">
 
-										<div id="htmlContentFeedback" class="invalid-feedback" 
-											th:if="${#fields.hasErrors('htmlContent')}" th:errors="*{htmlContent}">
-											Conteúdo inválido
-										</div>
+										<div id="htmlContentFeedback" class="invalid-feedback" th:if="${#fields.hasErrors('htmlContent')}"
+											th:errors="*{htmlContent}">Conteúdo inválido</div>
 									</div>
 
 									<div class="mb-3">
-										<label class="fw-bold">Você acha que esse novo conteúdo deveria ser adicionado ao conjunto de
-											tópicos "obrigatórios" para a conclusão da Disciplina?</label>
+										<label class="fw-bold">Você acha que esse novo conteúdo deveria ser adicionado ao conjunto
+											de tópicos "obrigatórios" para a conclusão da Disciplina?</label>
 
 										<div class="form-check">
-											<input class="form-check-input" type="radio" name="required" id="flexRadioDefault1" 
-												value="true" th:field="*{required}">
-											<label class="form-check-label" for="flexRadioDefault1"> Sim, é este um dos principais tópicos
-												da disciplina.</label>
+											<input class="form-check-input" type="radio" name="required" id="flexRadioDefault1" value="true"
+												th:field="*{required}">
+											<label class="form-check-label" for="flexRadioDefault1"> Sim, é este um dos principais
+												tópicos da disciplina.</label>
 										</div>
 										<div class="form-check">
-											<input class="form-check-input" type="radio" name="required" id="flexRadioDefault2" 
-												value="false" th:field="*{required}">
+											<input class="form-check-input" type="radio" name="required" id="flexRadioDefault2" value="false"
+												th:field="*{required}">
 											<label class="form-check-label" for="flexRadioDefault2"> Não, é apenas um conteúdo extra.</label>
 										</div>
 									</div>
@@ -178,14 +175,16 @@
 				</ul>
 			</div>
 			<div class="card-body ">
-
 				<!-- Topics -->
-				<div class="list-group" th:if="${#strings.equalsIgnoreCase(page, 'topics')}">
-					<div class="list-group-item list-card-item mb-3 border-1 shadow"
-						th:each="topic : ${topics}" th:onclick=	"'showTopic(\'' + ${topic.id} + '\');'"						
+				<div id="topics" class="list-group" th:if="${#strings.equalsIgnoreCase(page, 'topics')}">
+					<div class="list-group-item list-card-item mb-3 border-1 shadow" th:each="topic : ${topics}"
+						th:onclick="'showTopic(\'' + ${topic.id} + '\');'" th:data-id="${topic.id}"
 						th:classappend="${topic.user.finished} ? 'border-success' : 'border-secondary'">
 						<div class="d-flex w-100 justify-content-between">
-							<h5 class="mb-1 fw-bolder" th:text="${topic.name}">Topic Name</h5>
+							<div class="d-flex align-items-center">
+								<h5 class="mb-1 fw-bolder" th:text="${topic.name}">Topic Name</h5>
+								<i class="bi bi-grip-horizontal ms-2" style="font-size: 1.5rem;" sec:authorize="hasRole('ROLE_ADMIN')"></i>
+							</div>
 
 							<i class="fa fa-check-circle fa-2x green" aria-hidden="true"
 								th:classappend="${!topic.user.finished}? 'd-none'"></i>
@@ -222,7 +221,8 @@
 								data-bs-target="#forumTopicModal">Criar um novo Tópico</button>
 
 							<!-- Modal -->
-							<div class="modal fade" id="forumTopicModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+							<div class="modal fade" id="forumTopicModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+								aria-hidden="true">
 								<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
 									<form action="#" method="post" th:action="@{/disciplines/{id}/forum-topics(id=${discipline.id})}"
 										th:object="${forumTopic}">
@@ -257,16 +257,14 @@
 					</div>
 
 					<div class="list-group" th:unless="${#lists.isEmpty(forumTopics)}">
-						<a href="#" class="list-group-item list-group-item-action mb-2 shadow" 
-							th:each="topic : ${forumTopics}"
+						<a href="#" class="list-group-item list-group-item-action mb-2 shadow" th:each="topic : ${forumTopics}"
 							th:href="@{/disciplines/{id}/forum-topics/{topicId}(id=${discipline.id}, topicId=${topic.id})}">
 
 							<div class="d-flex w-100 justify-content-between">
 								<h5 class="mb-1" th:text="${topic.title}">Topic Title</h5>
 								<time class="text-muted timeago" th:datetime="${#dates.formatISO(topic.date)}">3 days ago</time>
 							</div>
-							<p class="mb-1 truncate" th:text="${topic.description}">Some placeholder content in a
-								paragraph.</p>
+							<p class="mb-1 truncate" th:text="${topic.description}">Some placeholder content in a paragraph.</p>
 
 							<small class="text-muted" th:text="'Criado por ' + ${topic.user.fullName}">Criado por Gustavo
 								Alves.</small>
@@ -279,6 +277,26 @@
 
 	<script type="text/javascript" th:src="@{/js/timeago/timeago.js}"></script>
 	<script type="text/javascript" th:src="@{/js/timeago/jquery.timeago.pt-br.js}"></script>
+
+	<script type="text/javascript" sec:authorize="hasRole('ROLE_ADMIN')">
+		var el = document.getElementById('topics');
+		
+		Sortable.create(el, {
+			animation: 150,
+			onEnd: function (event) {
+				let draggedTopicId = $(event.item).data('id');
+				let relatedTopicId;
+				
+				if (event.newDraggableIndex > event.oldDraggableIndex) {
+					relatedTopicId = $('#topics').children().eq(event.newDraggableIndex - 1).data('id');
+				} else {
+					relatedTopicId = $('#topics').children().eq(event.newDraggableIndex + 1).data('id');			
+				}
+				
+				$.post(window.location.origin + `/admin/topics/drag/${draggedTopicId}/${relatedTopicId}`);
+			}
+		});
+	</script>
 
 	<script type="text/javascript" th:inline="javascript">
 		$("time.timeago").timeago();
