--- a/src/main/resources/templates/disciplines/discipline-details.html
+++ b/src/main/resources/templates/disciplines/discipline-details.html
@@ -23,27 +23,27 @@
 			<div class="card-body">
 				<h3 class="card-title text-center fw-bolder" th:text="${discipline.code} + ' - ' +${discipline.name}"></h3>
 
-				<div class="col-10 offset-1 mb-3">
-					<h5 class="d-inline">Ementa:</h5>
-					<span th:text="${discipline.description}"></span>
-				</div>
+				<div class="col-10 offset-1">
+					<div class="mb-3">
+						<h5 class="d-inline">Ementa:</h5>
+						<span th:text="${discipline.description}"></span>
+					</div>
 
-				<div class="col-10 offset-1 mb-3">
 					<h5 class="d-inline">Objetivo:</h5>
 					<span th:text="${discipline.objective}"></span>
-				</div>
 
-				<div class="d-flex justify-content-end">
-					<div class="btn-group rounded-start" role="group" aria-label="Like toggle button">
-						<input type="checkbox" class="btn-check" id="likeButton" autocomplete="off"
-							th:checked="${discipline.user.liked}">
-						<label id="likingStatus" class="btn btn-outline-primary p-2" for="likeButton">
-							Curtir <i class="fa fa-thumbs-up"></i>
-						</label>
+					<div class="d-flex justify-content-end mt-3">
+						<div class="btn-group rounded-start" role="group" aria-label="Like toggle button">
+							<input type="checkbox" class="btn-check" id="likeButton" autocomplete="off"
+								th:checked="${discipline.user.liked}">
+							<label id="likingStatus" class="btn btn-outline-primary p-2" for="likeButton">
+								Curtir <i class="fa fa-thumbs-up"></i>
+							</label>
+						</div>
+						<span id="totalLikes"
+							class="fw-bolder text-primary border border-1 border-start-0 border-primary p-2 rounded-end"
+							th:classappend="${discipline.user.liked} ? 'bg-white' : 'bg-dark'" th:text="${discipline.likes}"></span>
 					</div>
-					<span id="totalLikes"
-						class="fw-bolder text-primary border border-1 border-start-0 border-primary p-2 rounded-end"
-						th:classappend="${discipline.user.liked} ? 'bg-white' : 'bg-dark'" th:text="${discipline.likes}"></span>
 				</div>
 			</div>
 
@@ -302,7 +302,6 @@
 		$("time.timeago").timeago();
 
 		$('#likeButton').click(function() {
-			
 			$.post(location.href.split('?')[0] + '/like');
 
 			let button = $(this);
