Fix likes buttons bug

--- a/src/main/resources/templates/disciplines/course-details.html
+++ b/src/main/resources/templates/disciplines/course-details.html
@@ -54,7 +54,7 @@
 						<div class="d-flex justify-content-end ">
 							<p class="mb-0 pb-0 text-secondary" th:text="'Semestre '+ ${discipline.semester}">Semestre: x</p>
 							<span class="ms-3 text-primary">
-								<i class="fa fa-thumbs-o-up"> 0</i>
+								<i class="fa fa-thumbs-o-up" th:text="' ' + ${discipline.likes}"> 0</i>
 							</span>
 						</div>
 					</div>
