--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,6 +22,9 @@
 					<li class="nav-item" sec:authorize="isAuthenticated()">
 						<a class="nav-link" href="#" th:href="@{/rewards}">Recompensas</a>
 					</li>
+					<li class="nav-item" sec:authorize="isAuthenticated()">
+						<a class="nav-link" href="#" th:href="@{/game}">Game</a>
+					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#" th:href="@{/ranking}">Ranking</a>
 					</li>
@@ -65,6 +68,11 @@
 						</button>
 
 						<div class="dropdown-menu dropdown-menu-lg-end">
+							<div class="text-center">
+								<span sec:authentication="name">Gustavo</span>
+							</div>
+
+							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#" th:href="@{/users/edit-profile}">Editar perfil</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#" th:href="@{/logout}">Logout</a>
