--- a/src/main/resources/templates/disciplines/course-details.html
+++ b/src/main/resources/templates/disciplines/course-details.html
@@ -24,7 +24,36 @@
 	</div>
 
 	<div class="container">
-		<div class="row justify-content-md-center mt-4">
+		<div th:unless="${#lists.isEmpty(recentDisciplines)}">
+			<h3 class="fw-bold mt-4">Continue de onde parou</h3>
+
+			<!-- Discipline cards -->
+			<div class="row row-cols-1 row-cols-md-3 g-4">
+				<div class="col" th:each="discipline : ${recentDisciplines}">
+					<div class="btn-card card h-100 shadow" th:onclick="|showDiscipline('${discipline.id}');|">
+						<h5 class="card-header btn-card-header" th:text="${discipline.name}"></h5>
+						<div class="card-body">
+							<p class="card-text text-truncate" th:text="${discipline.description}">This is a wider card with
+								supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+						</div>
+						<div class="card-footer">
+							<div th:with="progress=${discipline.user.progress}">
+								<div class="progress text-center" style="height: 10px;">
+									<div class="progress-bar progress-bar-striped progress-bar-animated fw-bolder" role="progressbar"
+										aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 55%"
+										th:style="|width: ${progress}%|" th:classappend="${progress} == 100 ? 'bg-green' : 'bg-dark'"></div>
+								</div>
+								<small class="text-muted" th:text="${progress} > 0 ? ${progress} + '% concluído' : 'Começar agora'"></small>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<br>
+		</div>
+
+		<div class="row justify-content-md-center mt-3">
 			<div class="col-md-8">
 				<label for="inputFilter" class="form-label">Pesquise por</label>
 				<input id="inputFilter" class="form-control" type="text" placeholder="Disciplina, Assunto, Palavra-chave">
