--- a/src/main/resources/templates/admin/questions.html
+++ b/src/main/resources/templates/admin/questions.html
@@ -33,11 +33,11 @@
 						<td class="align-middle fw-bold text-center" th:text="${question.id}"></td>
 						<td class="align-middle"><p class="content" th:text="${question.description}"></p></td>
 						<td class="align-middle text-center" th:text="${question.type.displayName}"></td>
-						<td class="align-middle text-truncate" th:text="${question.topic.name}"></td>
+						<td class="align-middle text-truncate" th:text="${question.topic != null? question.topic.name : ''}"></td>
 						<td class="align-middle" th:text="${#dates.format(question.creationDate, 'dd/MM/yyyy')}"></td>
 						<td class="align-middle text-center" th:text="${question.status.displayName}"></td>
 						<td class="align-middle"><a class="btn btn-outline-dark button-sm" href="#"
-								th:href="@{/questions/admin/{id}(id=${question.id})}">Abrir</a></td>
+								th:href="@{/admin/questions/{id}(id=${question.id})}">Ver mais</a></td>
 					</tr>
 				</tbody>
 			</table>
