--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -51,7 +51,7 @@
 								<a class="dropdown-item" href="#" th:href="@{/admin/topics}">Gerenciar Tópicos</a>
 							</li>
 							<li>
-								<a class="dropdown-item" href="#" th:href="@{/questions/admin}">Gerenciar Questões</a>
+								<a class="dropdown-item" href="#" th:href="@{/admin/questions}">Gerenciar Questões</a>
 							</li>
 						</ul>
 					</li>
