Add a button to bookmark a topic

--- a/src/main/resources/templates/disciplines/topic-details.html
+++ b/src/main/resources/templates/disciplines/topic-details.html
@@ -46,6 +46,14 @@
 					<p th:text="${topic.description}"></p>
 					
 					<div class="d-flex justify-content-end mt-3">
+						<div class="btn-group rounded-start me-3" role="group" aria-label="Like toggle button">
+							<input type="checkbox" class="btn-check" id="fav-button" autocomplete="off"
+								th:checked="${topic.user.favorite}">
+							<label class="btn btn-outline-primary p-2" for="fav-button">
+								<i class="bi bi-star-fill"></i>
+							</label>
+						</div>
+						
 						<div class="btn-group rounded-start" role="group" aria-label="Like toggle button">
 							<input type="checkbox" class="btn-check" id="likeButton" autocomplete="off"
 								th:checked="${topic.user.liked}">
