--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -71,7 +71,8 @@
 							<div class="text-center">
 								<span sec:authentication="name">Gustavo</span>
 							</div>
-
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#" th:href="@{/users/favorites}">Meus favoritos</a>
 							<div class="dropdown-divider"></div>
 							<a class="dropdown-item" href="#" th:href="@{/users/edit-profile}">Editar perfil</a>
 							<div class="dropdown-divider"></div>
